src/test/deca/context/invalid/print-undeclaredVariable.context
print-undeclaredVariable.deca:2: